@@ -2,6 +2,6 @@ DIST gentoo-ru-0.04.gz 13264 RMD160 8b49f3ae1970c0f8af719760c5726252ce5fcb84 SHA
 DIST gentoo-ru-0.05.gz 16844 RMD160 7a393bd95026fee3330074285d05cc5c893d7137 SHA1 d82b5c7ababe7739db08b3f08fb7e6b0977baee4 SHA256 2f9299fccb5d152813730013c4ad4ee287823f20eea05b3c40903ed17f78a66f
 EBUILD fortune-mod-gentoo-ru-0.04.ebuild 776 RMD160 f6c237b37978227dc02685dd11711737e34ec46e SHA1 401544d7a06c77bb262464007490bcf704641004 SHA256 a8db1d67ac3808fa7d35ea3ec86e7861098943a1f35a9bf77c01383047fb48b7
 EBUILD fortune-mod-gentoo-ru-0.05.ebuild 776 RMD160 f6c237b37978227dc02685dd11711737e34ec46e SHA1 401544d7a06c77bb262464007490bcf704641004 SHA256 a8db1d67ac3808fa7d35ea3ec86e7861098943a1f35a9bf77c01383047fb48b7
-EBUILD fortune-mod-gentoo-ru-9999.ebuild 752 RMD160 149b17c05f6a2073b1b441dbf444ac07909c2013 SHA1 7889e1ad6334dd6161ff8b10e9985cb2120f2eca SHA256 0863cbb8c2cdd878390bb057e4915de35dd33572321953aa4e66e02d6eb4cb53
-MISC ChangeLog 869 RMD160 15c0dc9330c7eb409ef361a9c616cbec25fdc989 SHA1 bd6c58a386226d7514f91cc5d9ac9950d415650e SHA256 75503609fd2620ae1edf6a4617404231966c62641fdb68e3843234807e4a0f9f
+EBUILD fortune-mod-gentoo-ru-9999.ebuild 654 RMD160 db1d48be150c9ab6ace88abf9ea0da49f8b05270 SHA1 f9ec3b40e7b64d5a8529e94f064bdcf2fb7df6fa SHA256 50fe2e251754bff723da180700caa9fb7139f7170954339cd273e2df96fc8929
+MISC ChangeLog 995 RMD160 d8670f0fbccda346f5de7d7ce8abad0999e1c02e SHA1 825c9cd9ffade1e8800be2311e2eb326b2d7c2f3 SHA256 7ba9f6bf39c0d95662c89625674f1901f76bf11e8bbf2c82ab5b48d50052c06c
 MISC metadata.xml 496 RMD160 20c1d96bc38fa9aa28ac23001c49f2e2cd59b0aa SHA1 475087d0baeff56b3c73066e51a947cf7dfbf4c5 SHA256 7e60b43f4827cd5e132de66d29cd94ca009ab5b3bf22b3279bdbcb12f57dd546
