@@ -12,7 +12,6 @@ SRC_URI=""
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 ESVN_REPO_URI="http://slepnoga.googlecode.com/svn/fortunes/"
 RDEPEND="games-misc/fortune-mod"
