@@ -1,5 +1,0 @@
-DIST vegastrike-linux-0.5.0.tar.bz2 520498096 RMD160 efea15ff1c1d9e627f515d0fa2e4e1453799b8a8 SHA1 021e92e8ec28cb8db35336bdcb5b3f94f180e72d SHA256 e273191dcdb3bed3edeff2618b0dfac56cc0ae2d2fe2855b4376c80ccadee02d
-DIST vegastrike-source-0.5.0.tar.bz2 9093178 RMD160 b22d54ee25d19683a7ec32f52e25f2262bdd38a7 SHA1 b478aaaa0b3c732c6575793f846835222a2ce60d SHA256 e4fe2aeeece103d87ae11ca8b27e48b72cc7ed8a0c1bed44e7131afd644fde72
-EBUILD vegastrike-0.5.0.ebuild 5326 RMD160 cf82d5b8662b56f3388a4baa3430357a4f27a536 SHA1 a4690fa9fc75a15c6effc005c53a646ec30d9ea6 SHA256 26d96239ee938beb5e8ea4823bcf3e5827b012782cf467b2a725e923ef362dbf
-MISC ChangeLog 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
-MISC metadata.xml 433 RMD160 f836ab999589a2cdc3b4885e6e67c4c987ebd74e SHA1 9703f5aa6fdae8a9b1bdcb4050e301f624fa9e6a SHA256 91694ee68651f01b52a2f9bd1a58ac5336a225e6ebaccba8db48ff97015e5906
