@@ -1,14 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-<herd>rion-overlay</herd>
-<maintainer>
-  <email>@gmail.com</email>
- <description>Description of the maintainership</description> 
-</maintainer>
- <longdescription>Long description of the package</longdescription> 
-<use>
-<flag name='no-sound'> </flag>
-<flag name='stencil-buffer'> </flag>
-</use>
-</pkgmetadata>
