@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  fortune-mod-gentoo-ru-9999.ebuild:
+  drop all keywords in 9999 ebuild
+
   09 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   fortune-mod-gentoo-ru-0.04.ebuild:
   fix mirror
